Simplify topology and inputs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,3 +44,8 @@ test {
         events "passed", "skipped", "failed"
     }
 }
+
+task runSourceProcessorExample(type: JavaExec) {
+    main = 'com.example.tutorials.sourceprocessor.App'
+    classpath sourceSets.main.runtimeClasspath
+}
